<resources>
    <string name="app_name">MiniAppAuth</string>
    <string name="base_url">http://10.96.137.191:8080/</string>
    <string name="auth_title">Welcome back</string>
    <string name="auth_subtitle">Access your account or create a new one.</string>
    <string name="login_title">Login</string>
    <string name="login_helper">Sign in to continue.</string>
    <string name="signup_title">Sign Up</string>
    <string name="signup_helper">Create your account in seconds.</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="dashboard_message">You are logged in as %1$s</string>
    <string name="profile_title">Your Profile</string>
    <string name="profile_helper">Review your account details.</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="action_login">Login</string>
    <string name="action_signup">Sign up</string>
    <string name="action_create_account">Create Account</string>
    <string name="action_view_profile">View Profile</string>
    <string name="action_logout">Logout</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="profile_user_id">User ID</string>
    <string name="profile_user_id_value">A0001</string>
    <string name="profile_name">Name</string>
    <string name="profile_name_value">Firstname Lastname</string>
    <string name="profile_email">Email</string>
    <string name="profile_email_value">firstname@email.com</string>
    <string name="error_generic">Something went wrong. Please try again.</string>
</resources>
